# HessFormer

./: README.md  demo.ipynb  pyproject.toml
hessformer/: __init__.py  cli.py  core.py  data.py  hvp_backends.py  lanczos.py  utils.py
hessformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hessformer/tests/: test_smoke.py
